Quote Battle : fixed always visible leaderboard

--- a/basics/revision-basics/Quote Battle/styles.css
+++ b/basics/revision-basics/Quote Battle/styles.css
@@ -150,9 +150,9 @@ h1 {
     font-weight: bold;
 }
 
-/* .hidden {
+.hidden {
     display: none;
-} */
+}
 
 .locked-text {
     filter: blur(2.5px);
